tests/0049-function-body-must-be-block.src.err
ERROR: Expected '{' but got '10'
 | let f = fun () 10;
                  ^
